fixed overlapping issue with edit button

--- a/public/css/styles3.css
+++ b/public/css/styles3.css
@@ -126,6 +126,7 @@ body{
     border-radius: 5px;
     padding: 10px;
     cursor: pointer;   
+    margin-bottom: 23px;
 }
 
 .bio-tag, .github-tag{
